# tacoq

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml
client_sdks/python/: .gitignore  READMD.md  README.md  pyproject.toml
client_sdks/python/examples/: config.py  example_producer.py  example_worker.py
client_sdks/python/src/: __init__.py  logger_manager.py  tracer_manager.py
client_sdks/python/src/broker/: __init__.py  client.py  config.py  core.py  rabbitmq.py
client_sdks/python/src/cli/: cli.py  importer.py  logger.py  reloader.py  runner.py
client_sdks/python/src/core/models/: __init__.py  exception.py  task.py
client_sdks/python/src/core/telemetry/: __init__.py
client_sdks/python/src/manager/: client.py  config.py
client_sdks/python/src/models/: __init__.py  exception.py  task.py
client_sdks/python/src/publisher/: __init__.py  client.py
client_sdks/python/src/python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
client_sdks/python/src/tacoq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
client_sdks/python/src/tacoq/publisher/: client.py
client_sdks/python/src/tacoq/worker/: __init__.py  client.py  config.py
client_sdks/python/src/worker/: client.py  config.py
client_sdks/python/src/worker/cli/: cli.py  reloader.py  runner.py
client_sdks/python/tacoq/: __init__.py
client_sdks/python/tacoq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
client_sdks/python/tacoq/core/encoding/: __init__.py  encoder.py  json_dict.py  models.py  passthrough.py  polymorphic.py  pydantic.py  string.py
client_sdks/python/tacoq/core/models/: __init__.py  avro_serializable_base_model.py  task.py  task_assignment_update.py  task_completed_update.py  task_running_update.py
client_sdks/python/tacoq/publisher/: __init__.py  client.py
client_sdks/python/tacoq/relay/: __init__.py  client.py
client_sdks/python/tacoq/worker/: __init__.py  client.py  config.py
client_sdks/python/tacoq/worker/cli/: __init__.py  cli.py  logger.py  runner.py
client_sdks/python/tests/: conftest.py
client_sdks/python/tests/benchmarks/: README.md  test_task_creation.py
client_sdks/python/tests/e2e/: test_full.py
client_sdks/python/tests/manager/: test_health_check.py  test_tasks.py  test_worker_kind.py
client_sdks/python/tests/publisher/: test_publisher_client.py
client_sdks/python/tests/unit/encoding/: test_encoders.py
client_sdks/python/tests/unit/manager/: test_health.py  test_tasks.py
client_sdks/python/tests/worker/: test_worker_client.py
server/libs/common/: Cargo.toml
server/libs/common/migrations/: 20241122195218_init.sql
server/libs/common/src/: lib.rs
server/relay/: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml
server/relay/.sqlx/: query-0053c7dc2c891acfe3dc3af7a3d9c9713816b1f55c421adb0cfba62a67713c80.json  query-0ab80677d75d44db48184d3da4d128d4199ce220badb97b9dac4e0e3d85b5fc7.json  query-0db4cba48cc4e1c14ae25037ea1a5ef2d303a60128a987274ddae740c034cb8d.json  query-119ce7a59e9702251355c77e2b2e600eb3c1924737dca4330bbd0d90df6cbd70.json  query-12bcc154551da923916731a64b54f6d98085d154de19a66c566b003b58496ddc.json  query-1da0e7b63c36904cd469355b06e45ac62878741e2230fed7daa4657d842b9d5e.json  query-278fc6e83527883e4c4d95978032422b4c306fe6075e42235e805ceefc42dd74.json  query-2dd430458bb49d961dcd9245e6c7d7f7557468dd964fab6591cbb3582fae6107.json  query-417c6d2379b5dcf7976f4f459689564ec06194603fe4b45e9a50f6a0eea25f1d.json  query-44d1458a0e4a39b40b05a625df8e2b41accbc29787aa48afc822621482b1d1ee.json  query-5198866d388ad4b4830ba7638a9c0552be51f1a23d718c33a4af3bcc49d65e9b.json  query-570d2f4be085dc9327c125d29224d21f2892599f8f15d28d4aed3f3960db0952.json  query-5f124dcdaec099fee7d6a760ef398499a7680297a70939edb5a6b1e3e495e652.json  query-66b4b138996ebb70a9121d93d89c146d5a83b02af32de35dbdaf4d3022c3a7b6.json  query-76d197a96bf6ad64f870223f25024b1dc4e379cf200838ae445e8b78dbe12dc5.json  query-843bdc29487dbc8314fc8c55f3df2166fc0e9611d08766b64eb479183fb72242.json  query-9f3bd4b170cd06f5ce33d30207ab46805782d893a56da547884176397df0311e.json  query-9fa4bc75695487ad11c654a156b7d340401f7da38361207b444b4c0ce0e6be32.json  query-9fc6922fdcd5dde3dd11e6bdc7874163f8d2151f9ab0ddcfe87b069d8bb5d775.json  query-a427b30584ee27acdf01ae89ce8495c8c86312050df3d61015d4a2c026b3db5c.json  query-a5e2fe91460c0c77d8dca24cd7f25d3bdd376fc70cd7f72ab4a0ff95f23603ca.json  query-aea638ffa3e2bbdc0784c11746e668d015708092ebebd6e999d7b14771c61778.json  query-e16e34b202d01c5b03d1ca934b038a6f1809ad1aa0afdb1b7d41ca413b1fb420.json  query-ef14b4769b1fa90993d2137c996e823c69fce04db629e4f8578ad96fae92a434.json
server/relay/migrations/: 20241122195218_init.sql  20250309194053_add_ttl_duration.sql
server/relay/src/: config.rs  constants.rs  health_probe.rs  lifecycle.rs  main.rs  server.rs  testing.rs
server/relay/src/api/: health.rs  mod.rs  openapi_docs.rs  task.rs
server/relay/src/brokers/: core.rs  mod.rs  rabbit.rs
server/relay/src/consumer/: message_types.rs  mod.rs  update_consumer.rs
server/relay/src/controller/: task.rs
server/relay/src/jobs/: mod.rs  task_cleanup.rs
server/relay/src/models/: avro_trait.rs  mod.rs  task.rs  task_assignment.rs  task_avro.rs  task_completed.rs  task_running.rs  tasks.rs  workers.rs
server/relay/src/repo/: core.rs  mod.rs  task_repo.rs  traits.rs
server/relay/src/task_event_consumer/: event_parsing.rs  handler.rs  mod.rs
server/services/manager/: .env.sample  Cargo.toml  Dockerfile  build.rs
server/services/manager/.sqlx/: query-44d1458a0e4a39b40b05a625df8e2b41accbc29787aa48afc822621482b1d1ee.json  query-9424ed5a17e1d8eac66586ffaf282ec6bb097ecfbde521c27562b1906361d730.json  query-c7f8fc0e891446e95cc14b14e0aca99bcad7ddd60a89c882359c4ebdf0f9d602.json  query-d1467fb2a644ecebccabd7dd7349cb78e29776076c8d0abd6b34e09b88f6c259.json  query-df046cb725c1f0ab2c6d5a6078c26584e02a2e14614fbd8b0d7b7ac05ef0493d.json  query-e6e1b3f9587b8369b5cbd0ede1a5ac4f2b8815482d1d56994df579d5de3d1639.json
server/services/manager/src/: config.rs  constants.rs  main.rs  server.rs  testing.rs
(+257 files in other folders)
