[project]
name = "tacoq"
version = "0.1.0"
description = "Python SDK to interact with the TacoQ Service API"
readme = "README.md"
authors = [
    { name="Manuel Costa" },
    { name="Pedro Ribeiro" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.3",
    "aiohttp-retry>=2.9.1",
    "aiohttp>=3.11.8",
    "aioredis>=2.0.1",
    "aioresponses>=0.7.8",
    "click>=8.1.7",
    "pydantic>=2.10.5",
    "uuid>=1.30",
    "watchfiles>=1.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "bench: benchmark a function",
    "target: current target test. Used locally.",
    "unit: unit tests",
    "service: tests that interact with external services",
    "e2e: end-to-end tests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
tacoq = "cli.cli:cli"

