[package]
name = "manager"
version = "0.1.0"
edition = "2021"
description = "Galactus is a monolithic service that handles communication with the database, distributing tasks among workers, and communicating with the database."

[dependencies]
common = { path = "../../libs/common" }
async-trait = "0.1.83"
dotenv = "0.15.0"
futures = "0.3.31"
tracing = "0.1.40"
tokio = { version = "1.41.1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros", "tracing"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid"]}
utoipa-axum = "0.1.2"
time = { version = "0.3.36", features = ["serde"] }
axum-tracing-opentelemetry = "0.26.1"
init-tracing-opentelemetry = { version = "0.27.1", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
mockall = "0.13.1"
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
tracing-opentelemetry = "0.29.0"


[dev-dependencies]
ctor = "0.2.9"
axum-test = "17.0.1"
